force-app/main/default/objects/Billing_History__c/Billing_History__c.object-meta.xml
<CustomObject>
    <label>Billing History</label>
    <nameField>
        <displayFormat>Bill-{000000}</displayFormat>
        <label>Billing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>