force-app/main/default/objects/Billing_History__c/fields/Billing__c.field-meta.xml
<CustomField>
    <fullName>Billing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing</label>
    <referenceTo>AcctSeed__Billing__c</referenceTo>
    <relationshipLabel>Billing History</relationshipLabel>
    <relationshipName>Billing_History</relationshipName>
    <type>Lookup</type>
</CustomField>